--- a/src/component/home/style.css
+++ b/src/component/home/style.css
@@ -11,12 +11,14 @@ p {
     background-position: center;
     background-size: 105% 115%;
     width: 100%;
+    /* height: 100vh; */
     padding-top: 5rem;
 }
 
 .home_black-bg {
     background-color: rgb(0 0 0 / 30%);
     width: 100%;
+    /* min-height: 100vh; */
     margin-top: 3rem;
     padding-top: 4.5rem;
 }
@@ -24,6 +26,7 @@ p {
 .home_black-bg>div {
     background-color: rgb(0 0 0 / 30%);
     width: 100%;
+    /* min-height: 100vh; */
     padding-bottom: 2.5rem;
 }
 
@@ -450,6 +453,10 @@ p {
 
 /* media start */
 @media (max-width: 1400px) {
+    /* .home_qash {
+        height: 115vh;
+    } */
+
     .kash_info img {
         margin-top: -2.5rem;
         margin-right: 3.5rem;
