--- a/src/component/admin/navbar/style.scss
+++ b/src/component/admin/navbar/style.scss
@@ -1,7 +1,3 @@
-// .navbar-menu__brend {
-//     background-color: #000000a8;
-//     z-index: 1000;
-//     font-family: 'Titillium Web';
-//     text-align: center;
-//     font-weight: 700;
-// }
+.menu__brand-two {
+    background-color: #007bff7e;
+}
